<resources>
    <string name="app_name">BleScanner</string>
    <string name="set_min_max_rssi">Set min/max rssi</string>
    <string name="set_min_rssi">Set min rssi</string>
    <string name="set_max_rssi">Set max rssi</string>
    <string name="mac">Serial</string>
    <string name="rssi">RSSI</string>
    <string name="current_min_rssi">Min rssi:</string>
    <string name="current_max_rssi">Max rssi:</string>
    <string name="set_rssi">Set rssi values</string>
    <string name="counter">Package counter</string>
    <string name="analysisTime">Select the analysis time</string>
    <string name="analysis">Analysis time</string>
    <string name="start_scan">Starting the scan</string>
    <string name="scanningStarted">Scanning started</string>
    <string name="scanningStoped">Scanning stoped</string>
    <string name="send_report">Send the report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scanning">Scanning</string>
    <string name="calling">Calling</string>

</resources>