<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ScanningFragment"
    android:keepScreenOn="true">

    <TextView
        android:id="@+id/tv_min_rssi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_max_rssi"
        app:layout_constraintBottom_toTopOf="@id/spn_analysis"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="8pt"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_max_rssi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_min_rssi"
        app:layout_constraintStart_toEndOf="@id/tv_min_rssi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spn_analysis"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="8pt"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spn_analysis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_min_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_start_scan"
        android:prompt="@string/analysisTime"
        android:accessibilityPaneTitle="@string/analysisTime"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:id="@+id/btn_start_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spn_analysis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scanningLabel"
        android:text="@string/start_scan"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg"
        android:textSize="15sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/scanningLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_start_scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_rv_item_tv"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="8pt"
        android:padding="5dp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btn_set_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_max_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spn_analysis"
        android:text="@string/set_min_max_rssi"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:textStyle="normal"
        android:visibility="gone" />

    <TextView
        android:id="@+id/main_rv_item_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_set_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_rv_item_tv_rssi"
        app:layout_constraintBottom_toTopOf="@id/main_rv"
        android:padding="15dp"
        android:text="@string/mac"
        android:gravity="center_vertical"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/main_rv_item_tv_rssi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_rv_item_tv"
        app:layout_constraintStart_toEndOf="@id/main_rv_item_tv"
        app:layout_constraintEnd_toStartOf="@id/main_rv_item_tv_counter"
        app:layout_constraintBottom_toBottomOf="@id/main_rv_item_tv"
        android:padding="15dp"
        android:text="@string/rssi"
        android:gravity="center|center_vertical"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/main_rv_item_tv_counter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_rv_item_tv"
        app:layout_constraintStart_toEndOf="@id/main_rv_item_tv_rssi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/main_rv_item_tv"
        android:padding="15dp"
        android:text="@string/counter"
        android:gravity="center|center_vertical"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_rv_item_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="LinearLayoutManager"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btn_send_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_rv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_report"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg"
        android:textSize="15sp"
        android:textStyle="normal"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>