<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_min_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_max_rssi"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="8pt"/>

    <TextView
        android:id="@+id/tv_max_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_min_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_set_rssi"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="8pt"/>

    <Button
        android:id="@+id/btn_set_rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_max_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_rv_item_tv"
        android:text="@string/set_min_max_rssi"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg"
        />

    <TextView
        android:id="@+id/main_rv_item_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_set_rssi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_rv_item_tv_rssi"
        app:layout_constraintBottom_toTopOf="@id/main_rv"
        android:padding="15dp"
        android:text="@string/mac"
        android:gravity="center_vertical"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/main_rv_item_tv_rssi"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main_rv_item_tv"
        app:layout_constraintStart_toEndOf="@id/main_rv_item_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/main_rv_item_tv"
        android:padding="15dp"
        android:text="@string/rssi"
        android:gravity="center_vertical"
        android:textColor="@color/black"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_rv_item_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="LinearLayoutManager"
        android:textColor="@color/black"
        />



</androidx.constraintlayout.widget.ConstraintLayout>